roles/servers/files/10.32.16.249/iptables
# Generated by iptables-save v1.3.5 on Fri Feb  3 08:21:59 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [91:10374]
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.16.249 -j ACCEPT 
-A INPUT -s 127.0.0.1 -i lo -j ACCEPT 
-A INPUT -s 10.32.16.180 -i eth0 -j ACCEPT 
-A INPUT -s 10.32.16.102 -i eth0 -j ACCEPT 
-A INPUT -s 10.32.16.79 -i eth0 -j ACCEPT 
-A INPUT -s 10.32.16.104 -i eth0 -j ACCEPT 
-A INPUT -s 10.32.16.179 -i eth0 -j ACCEPT 
-A INPUT -s 10.32.10.72 -i eth0 -j ACCEPT 
-A INPUT -s 10.32.10.89 -i eth0 -j ACCEPT 
-A INPUT -s 10.13.15.2 -i eth1 -j ACCEPT 
-A INPUT -s 10.13.15.5 -i eth1 -j ACCEPT 
-A INPUT -s 192.168.10.15 -i eth1 -j ACCEPT 

#sysmon
-A INPUT -s 10.32.16.179 -i eth0 -p icmp --icmp-type 8  -j ACCEPT

#IP server app smsdispatcher bumiputera
-A INPUT -s 192.168.10.17 -i eth1 -j ACCEPT 

-A INPUT -j LOG --log-prefix "INPUT --DROP " --log-level 6 
-A FORWARD -s 10.13.15.2 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j ACCEPT 
-A FORWARD -s 10.13.15.1 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j ACCEPT 
-A FORWARD -s 192.168.10.15 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j ACCEPT 

#IP server app smsdispatcher bumiputera
-A FORWARD -s 192.168.10.17 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j ACCEPT 

-A FORWARD -s 10.32.10.89 -d 10.13.15.5 -p tcp -m tcp -j ACCEPT 
-A FORWARD -s 10.32.10.89 -d 10.13.15.2 -p tcp -m tcp -j ACCEPT 
-A FORWARD -s 10.32.10.89 -d 192.168.10.15 -p tcp -m tcp -j ACCEPT 

#IP server app smsdispatcher bumiputera
-A FORWARD -s 10.32.10.89 -d 192.168.10.17 -p tcp -m tcp -j ACCEPT 

-A FORWARD -j LOG --log-prefix "FORWARD --DROP " --log-level 6 
COMMIT
# Completed on Fri Feb  3 08:21:59 2012
# Generated by iptables-save v1.3.5 on Fri Feb  3 08:21:59 2012
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [17:1230]
:OUTPUT ACCEPT [17:1230]
-A PREROUTING -s 10.13.15.2 -d 10.13.15.5 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.32.10.89:8080 
-A PREROUTING -s 10.13.15.1 -d 10.13.15.5 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.32.10.89:8080 
-A PREROUTING -s 192.168.10.15 -d 10.13.15.5 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.32.10.89:8080 

#IP server app smsdispatcher bumiputera
-A PREROUTING -s 192.168.10.17 -d 10.13.15.5 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.32.10.89:8080 

-A POSTROUTING -s 10.13.15.2 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j SNAT --to-source 10.32.16.249 
-A POSTROUTING -s 10.13.15.1 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j SNAT --to-source 10.32.16.249 
-A POSTROUTING -s 192.168.10.15 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j SNAT --to-source 10.32.16.249 

#IP server app smsdispatcher bumiputera
-A POSTROUTING -s 192.168.10.17 -d 10.32.10.89 -p tcp -m tcp --dport 8080 -j SNAT --to-source 10.32.16.249 

#sysmon
-A POSTROUTING -s 10.32.16.179 -d 10.13.15.1 -p icmp --icmp-type 8  -j SNAT --to-source 10.13.15.5

COMMIT
# Completed on Fri Feb  3 08:21:59 2012
